SQuirreL SQL FX Change Log
==============================

Feature: If a table cell is double clicked a cell data display window opens. This window's right mouse menu now offers an entry to reformat Xml or Json strings.

Improvement: Code completion and abbreviations now handle boundary characters like (),=<> better.

Bug fix: Application window size was not saved on application exit.

Bug fix: The "Reconnect database" button switched auto commit mode.

Bug fix: Improved/corrected calculation of table/view closest to the caret once more. Now completion of unqualified columns works better than before.

Feature: Object tree detail tables as well as SQL result meta data tables do now offer the standard right mouse menu.

Bug fix: Fixed encoding bug that made SQuirreL FX crash during start up when for example German umlauts where used for Alias names or elsewhere.

Feature: New menu item to save all settings immediately, see menu File --> "Save all settings"
         Note: Settings are autmatically saved on application closing.

Feature: New checkbox in settings "When Aliases are copied Alias properties should be copied too", see menu File --> Settings --> Tab General.

Bug fix: When a connection test within an Alias dialog failed the error message dialog was hidden behind the Alias dialog.

Feature: Delete rows right mouse menu editable in SQL results:
         If a SQL result has been made editable by the pen button on the upper right of the result.
         The results right mouse menu offers a "Delete selected rows" menu item.

Bug fix: Running SQL by clicking the tool bar button used to take the focus off the SQL editor.

Improvement: Double click selection in SQL editor now selects words correctly.

Bug fix: Abbreviations where triggered by any succeeding key not only by space.

Upgraded RichTextFX to version 0.6.10.

Bug fix: Corrected positioning of join generators in completion popup list.
